Fixed layout bugs

--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -14,7 +14,6 @@
   background-color: rgb(17, 16, 16);
   border: 1px solid rgb(49, 48, 48);
   border-radius: 15px;
-  padding: 2rem;
 }
 
 @media screen and (max-width: 900px) {
@@ -42,7 +41,7 @@
 .project_image {
   width: 100%;
   height: 7rem;
-  border-radius: 5px;
+  border-radius: 0.6rem;
 }
 
 .project_title {
